# compact-json-qt-gui

./: README.md  pyproject.toml
compact_json_qt_gui/: __main__.py
